리포트, 마이페이지 수정 전